# robot-vision

./: .gitignore  CMakeLists.txt  Firmata.cpp  Firmata.h  PID_v1.cpp  PID_v1.h  QTRSensors.cpp  QTRSensors.h  arduinocomm.cpp  arduinocomm.h  arduinocomm.hpp  bachelor-line.cpp  bachelor-line.h  camshift.cpp  camshift.h  controller.cpp  controller.hpp  drive.cpp  drive.h  encoder.cpp  encoder.h  find_lines.cpp  find_lines.hpp  frameplayer.cpp  frameplayer.hpp  gyro.cpp  gyro.h  gyroscope.cpp  gyroscope.hpp  line.cpp  line.h  log.conf  main.cpp  main.h  main.hpp  ping.cpp  ping.hpp  player.cpp  player.h  serial.cc  (+7 more)
QTRSensors-JetsonTk1/: QTRSensors.cpp  QTRSensors.h
SimpleGPIO/: SimpleGPIO.cpp  SimpleGPIO.h
drive/: drive.cpp  drive.cpp.bak  drive.h  drive.h.bak  drive_rotate.cpp  drive_rotate.hpp  drive_straight.cpp  drive_straight.hpp
encoder/: encoder.cpp  encoder.h
gmock/.svn/: wc.db
gmock/gtest/.svn/: wc.db
gtest/: config.status  libtool
gtest/autom4te.cache/: requests
gtest/lib/.libs/: libgtest_main.so.0.0.0
gtest/samples/.deps/: sample2.Plo  sample4.Plo
gtest/src/.deps/: gtest-all.Plo  gtest_main.Plo
gyroscope/: gyroscope.cpp  gyroscope.hpp
impl/: unix.cc
lib/: libgtest_main.la
lib/.libs/: libgtest.so.0.0.0  libgtest_main.so.0.0.0
mavlink/: mavlink.h
mavlink/common/: version.h
mavlink/pixhawk/: version.h
pid/: PID_v1.cpp  PID_v1.h
ps4jetson/driver/include/: ps4eye.h
ps4jetson/driver/src/: .gitignore  CMakeLists.txt  jetson_ps4_log  ps4_log  ps4driver.cpp  ps4driver.hpp  ps4eye.cpp  test.cpp
tests/: main.cpp
