cmake_minimum_required(VERSION 2.8)
project(Robot)
find_package(OpenCV REQUIRED)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra")
add_executable( main main.cpp )
add_library( utility utility.cpp )
add_library( Frameplayer frameplayer.cpp )
add_library( Vision vision.cpp )
add_library( QTRSensors QTRSensors-JetsonTk1/QTRSensors.cpp )
add_library( SimpleGPIO SimpleGPIO/SimpleGPIO.cpp )
include_directories(${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO QTRSensors-JetsonTk1)
target_link_libraries( Vision Frameplayer ${OpenCV_LIBS} )
target_link_libraries( main Frameplayer ${OpenCV_LIBS} QTRSensors SimpleGPIO Vision utility)
