cmake_minimum_required(VERSION 2.8)
project(Robot)
find_package(OpenCV REQUIRED)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -o3 -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11 -Wall -Wextra -pedantic")

add_executable( main main.cpp )
add_library( ps4driver ps4jetson/driver/src/ps4driver.cpp )
add_library( ps4eye ps4jetson/driver/src/ps4eye.cpp )
add_library( wserial serial.cc serial.cc serial/serial.h serial/v8stdint.h impl/unix.cc )
add_library( arduinocomm arduinocomm.cpp )
add_library( utility utility.cpp )
add_library( Frameplayer frameplayer.cpp )
add_library( Vision vision.cpp )
add_library( QTRSensors QTRSensors-JetsonTk1/QTRSensors.cpp )
add_library( SimpleGPIO SimpleGPIO/SimpleGPIO.cpp )
add_library( Controller controller.cpp )
include_directories( ${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO QTRSensors-JetsonTk1 ps4jetson/driver/include ps4jetson/driver/src ps4jetson/libusb/libusb )
find_library( libusb NAMES usb-1.0 PATHS ps4jetson/libusb/libusb/.libs )
target_link_libraries( ps4eye ${libusb} )
target_link_libraries( ps4driver ${libusb} ps4eye )
target_link_libraries( Vision Frameplayer ${OpenCV_LIBS} ps4driver )
target_link_libraries( wserial rt )
target_link_libraries( arduinocomm wserial )
target_link_libraries( Controller Frameplayer ${OpenCV_LIBS} QTRSensors SimpleGPIO Vision utility arduinocomm wserial )
target_link_libraries( main Controller )
