cmake_minimum_required(VERSION 2.8)
project(Robot)
find_package(OpenCV REQUIRED)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -o3 -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic -pg")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")

add_executable( main main.cpp )
add_library( ping ping.cpp )
add_library( ps4driver ps4jetson/driver/src/ps4driver.cpp )
add_library( ps4eye ps4jetson/driver/src/ps4eye.cpp )
add_library( wserial serial.cc serial.cc serial/serial.h serial/v8stdint.h impl/unix.cc )
add_library( arduinocomm arduinocomm.cpp )
add_library( utility utility.cpp )
add_library( Frameplayer frameplayer.cpp )
add_library( Vision vision.cpp )
#add_library( QTRSensors QTRSensors-JetsonTk1/QTRSensors.cpp )
add_library( SimpleGPIO SimpleGPIO/SimpleGPIO.cpp )
add_library( Controller controller.cpp )
add_library ( gyroscope gyroscope/gyroscope.cpp )
add_library( encoder encoder/encoder.cpp )
add_library( drive drive/drive.cpp )
add_library( pid pid/PID_v1.cpp )
include_directories( ${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO ps4jetson/driver/include ps4jetson/driver/src ps4jetson/libusb/libusb mavlink encoder gyroscope drive pid)
find_library( libusb NAMES usb-1.0 PATHS ps4jetson/libusb/libusb/.libs )

target_link_libraries( main Controller encoder drive )
target_link_libraries( drive pid encoder ping )
target_link_libraries( encoder SimpleGPIO )
target_link_libraries( ps4eye ${libusb} utility )
target_link_libraries( ps4driver ${libusb} ps4eye )
target_link_libraries( Vision Frameplayer ${OpenCV_LIBS} ps4driver utility)
target_link_libraries( wserial rt )
target_link_libraries( arduinocomm wserial utility )
target_link_libraries( Controller Frameplayer ${OpenCV_LIBS} SimpleGPIO Vision utility arduinocomm wserial gyroscope drive )
